# ChannelChanger

./: .gitignore  Cargo.toml  LICENSE  README.MD  README.md  channelchanger.js  package.json  sqlinit.txt  start.js  tokens.js
.github/ISSUE_TEMPLATE/: feature_request.md
config/: main.js
src/: bot.js  changer.js  index.js  main.rs
src/database/: mod.rs
src/lib/: Config.js  MostPlayed.js  changer.js  test.json
src/storage/: GuildConfig.js  abbreviations.json  admin.json  bot.json  channels.json  config.json  help.js  worker.js
src/storage/guilds/: 0.json  example.json
src/util/: data.js  logger.js
src/workers/: GuildConfig.js  bot.js  data.js
