[package]
name = "channel_changer"
version = "0.0.1"
authors = ["Pigpog <7060603@hotmail.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

sqlite = "0.26.0"

[dependencies.tokio]
version = "1.7.0"
features = ["macros", "rt-multi-thread"]

[dependencies.serenity]
version = "0.10.8"
features = ["cache", "framework"]

