[package]
name = "channel_changer"
version = "0.1.0"
authors = ["Pigpog <7060603@hotmail.ca>"]
license = "GPLv3"
readme = "README.MD"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rusqlite = "0.25.3"

[dependencies.tokio]
version = "1.7.0"
features = ["macros", "rt-multi-thread"]

[dependencies.serenity]
version = "0.10.9"
features = ["cache", "framework"]

